static/styles/main.css
/* --- Global --- */
:root {
    --white: #ffffff;
    --black: #000000;
    --brown: #7d5a40;
    --dark-brown: #6c4d40;
    --dark-grey: #404040;
    --green: #4e9b4d;
    --light-green: #61b660;
    --grey: #8d8d8d;
    --light-grey: #cdcdcd;
    --stone-one: #9b9286;
    --super-light-grey: #fcfcfc;

    --main-font: Arial, Helvetica, sans-serif;

    --max-width: 1440px;
}

html,
body {
    margin: 0px;
    padding: 0px;
    min-width: 300px;
}

ul {
    margin: 0px;
    padding: 0px;

    list-style: none;
}

body {
    font-family: var(--main-font, sans-serif);

    background-image: url("/static/assets/Background.png");
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--main-font, sans-serif);
    margin-top: 0px;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #212121;
}
h1 {
    font-weight: 800;
    font-size: 2.5em;
    letter-spacing: 2px;
}
h2 {
    font-weight: 700;
    font-size: 2.2em;
    margin-bottom: 30px;
    letter-spacing: 2px;
}
h3 {
    padding: 0px;
    font-weight: 600;
    font-size: 1.4em;
    color: #292929;
}

a {
    text-decoration: none;
    color: inherit;
}

p {
    font-size: 1.15em;
    line-height: 1.7em;
}

button {
    display: inline-block;
    border: none;
    padding: 1rem 2rem;
    margin: 0;
    text-decoration: none;
    background: #0069ed;
    color: #ffffff;
    font-family: sans-serif;
    font-size: 1rem;
    line-height: 1;
    cursor: pointer;
    text-align: center;
}

/* image styles */
img {
    max-width: 100%;
}

img.rounded {
    border-radius: 10px;
    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.4));
}

img.small {
    width: calc(200px + 20vw);
    margin: 10px;
}

img.medium {
    width: 45%;
    margin: 10px;
}

img.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.content {
    margin: auto;
    width: 90%;
    max-width: var(--max-width, 1440px);
}

.section {
    max-width: 900px;
    margin: auto;
}

.subtitle {
    display: block;
    font-weight: 500;
    font-size: 1.1em;
}

.break {
    margin-left: -100%;
    margin-right: -100%;
}

.indent p {
    text-indent: 3em;
}

.bullet {
    list-style: disc;
}

[class*="center"] {
    margin: auto;
}

[class*="center"] p {
    margin: auto;
}

.center-text {
    text-align: center;
}

.block {
    padding: 30px 10px;
}

.hidden {
    display: none;
}

.grow {
    -webkit-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}

.grow:hover {
    -webkit-transform: scale(1.05);
    -moz-transform: scale(1.05);
    -ms-transform: scale(1.05);
    -o-transform: scale(1.05);
    transform: scale(1.05);
}

[class*="btn"] {
    display: inline-block;

    margin-top: 20px;
    
    /* fallback background color for IE */
    background-color: green;
    background-color: #4e9b4d;
    
    
    background-color: var(--green, green);
    color: white;
    padding: 1em 1.5em;
    text-decoration: none;
    text-transform: uppercase;
}

[class*="btn"]:hover {
    background-color: var(--light-green, grey);
}

.btn-white {
    color: black;
    background-color: white;
}

.btn-white:hover {
    background-color: lightgrey;
}

/* Main Navbar */
.navbar {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -moz-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -moz-box-align: center;
    -ms-flex-align: center;
    align-items: center;

    z-index: 100;

    padding: 20px 0px;
    height: 80px;

    background-color: var(--super-light-grey, white);
    -webkit-filter: drop-shadow(10px 10px 50px rgba(0, 0, 0, 0.07));
            filter: drop-shadow(10px 10px 50px rgba(0, 0, 0, 0.07));
}

.navbar .content {
    margin: auto;
    width: 80%;
    height: 100%;
    font-family: var(--main-font, sans-serif);
    font-size: 1.3em;
    font-weight: 800;
    text-decoration: none;
    color: inherit;
    text-align: center;
}

.navbar .content img {
    height: 100%;
}

/* Hero */
.hero {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -moz-box-align: center;
    -ms-flex-align: center;
    align-items: center;

    min-height: 100px;

    background-image: url("/static/assets/HeroGrass.png"),
        -webkit-gradient(linear, left bottom, right top, from(#63b0dc), to(#a6e3ff));

    background-image: url("/static/assets/HeroGrass.png"),
        -webkit-linear-gradient(bottom left, #63b0dc, #a6e3ff);

    background-image: url("/static/assets/HeroGrass.png"),
        -moz-linear-gradient(bottom left, #63b0dc, #a6e3ff);

    background-image: url("/static/assets/HeroGrass.png"),
        -o-linear-gradient(bottom left, #63b0dc, #a6e3ff);

    background-image: url("/static/assets/HeroGrass.png"),
        linear-gradient(to top right, #63b0dc, #a6e3ff);
    -webkit-background-size: 100% auto;
    -moz-background-size: 100% auto;
    -o-background-size: 100% auto;
    background-size: 100% auto;
    background-position: bottom;
    background-repeat: no-repeat;
    
    text-transform: uppercase;
    letter-spacing: 2px;
}

.hero-container {
    width: 90%;
    max-width: var(--max-width, 1440px);
    margin: auto;
    margin-top: 10vw;
    margin-bottom: 20vw;
}


.footer {
    margin: auto;
    padding: 20px 50px 30px 50px;

    background-color: var(--dark-brown, brown);

    color: var(--white, white);
}

.footer h1, .footer h2, .footer h3 {
    color: white;
}

.footer span {
    display: block;
    margin-bottom: 8px;
}

.footer p {
    font-size: 0.9em;
    line-height: 1.25em;
}

.footer a:hover {
    text-decoration: underline;
}

.footer .section {
    margin: 30px auto;
}

.footer .contact {
    max-width: 350px;
    text-align: center;
}

.footer span {
    font-size: 1.2em;
}

.footer .contact h2 {
    padding-bottom: 15px;
}

@media screen and (min-width: 700px) {
    /* left aligns navbar logo */
    .navbar .content {
        text-align: left;
    }
}

@media screen and (min-width: 800px) {
    .navbar {
        -webkit-box-pack: left;
        -webkit-justify-content: left;
        -moz-box-pack: left;
        -ms-flex-pack: left;
        justify-content: left;
    }

    h1 {
        font-size: 4em;
    }

    .subtitle {
        font-size: 2em;
    }
    
    .block {
        padding-top: 70px;
        padding-bottom: 70px;
    }
}

/* EI specific rule */
@media screen and (min-width:0\0) {
   .navbar .content{
      margin: none;
   }

}

